fixed logos stacking on mobile and made homepage changes

--- a/css/layout.css
+++ b/css/layout.css
@@ -14,8 +14,7 @@ header {
     text-align: center;
     overflow: hidden;
 }
-
-header:before {
+header::before {
     content: '';
     display: inline-block;
     vertical-align: middle;
@@ -32,15 +31,15 @@ header .home-text {
 header .home-text h1 {
    font-size: 90px;
    font-family: Tahoma, sans-serif;
-   color: #4CEDFF;
-   letter-spacing: -2px;
+   color: #F2F2F2;
+   letter-spacing: 5px;
    margin: 0 auto 18px auto;
    text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);
 }
 header .home-text h3 {
    font: 22px;
    font-family: Tahoma, sans-serif;
-   color: #12A6FE;
+   color: #F2F2F2;
    margin: 0 auto;
    width: 70%;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
@@ -68,9 +67,9 @@ header .social {
     margin: 0 15px;
     padding: 0;
  }
- header .social li a { color: #4CEDFF
+ header .social li a { color: #3DBECC
     ; }
- header .social li a:hover { color: #fff; }
+ header .social li a:hover { color: #F2F2F2; }
 
 /* primary navigation */
 #nav-wrap ul, #nav-wrap li, #nav-wrap a {
@@ -118,7 +117,7 @@ ul#nav {
     line-height: 32px;
      text-decoration: none;
     text-align: left;
-    color: #4CEDFF;
+    color: #3DBECC;
  
      -webkit-transition: color .2s ease-in-out;
      -moz-transition: color .2s ease-in-out;
@@ -128,7 +127,7 @@ ul#nav {
  }
 
 ul#nav li a:active { background-color: transparent !important; }
-ul#nav li.current a { color: #fff; }
+ul#nav li.current a { color: #F2F2F2; }
 
 /* ---------------------------- About Section -----------------------------*/
 #about {
